# airflow-provider-azure-machinelearning

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  SUPPORT.md  azure_machinelearning_registry.yaml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  docker-images.yml  makefile.yml  pre-commit.yml  publish-to-pypi.yml
airflow_provider_azure_machinelearning/: __init__.py
airflow_provider_azure_machinelearning/example_dags/: AML_2Subs.py  AML_AutoML.py  AML_CommandJob.py  AML_Component.py  AML_Compute.py  AML_Endpoint.py  AML_Environment.py  AML_ParallelJob.py  AML_Pipeline.py  AML_PyEnv.py  AML_SweepJob.py  AML_data.py
airflow_provider_azure_machinelearning/example_dags/dags_data/assets/component/: README.md  train.yml
airflow_provider_azure_machinelearning/example_dags/dags_data/endpints/online/model-1/: sample-request.json
airflow_provider_azure_machinelearning/example_dags/dags_data/environments/environment_and_train/: conda.yml  train.yml
airflow_provider_azure_machinelearning/example_dags/dags_data/environments/lightgbm/: Dockerfile
airflow_provider_azure_machinelearning/example_dags/dags_data/jobs/automl-standalone-jobs/automl-image-object-detection-task-fridge-items/: coco2jsonl.py  odFridgeObjects_coco.json  yolo_onnx_preprocessing_utils.py
airflow_provider_azure_machinelearning/hooks/: machine_learning.py
airflow_provider_azure_machinelearning/operators/machine_learning/: component.py  compute.py  data.py  endpoint.py  environment.py  job.py  model.py
dev/: environment.yml  requirements.txt
dev/local/: Dockerfile  Makefile  README.md  docker-compose.yaml
dev/pypi/: .gitignore  Makefile  README.md  docker-compose.yaml
tests/hooks/: test_machine_learning.py
tests/operators/: test_component.py  test_compute.py  test_data.py  test_endpoint.py  test_environment.py  test_job.py  test_model.py
(+20 files in other folders)
