[metadata]
name = airflow-provider-azure-machinelearning
version = attr: airflow_provider_azure_machinelearning.__version__
description = Airflow provider package for Azure Machine Learning
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
license = MIT License
classifiers =
    Development Status :: 4 - Beta
    Framework :: Apache Airflow
    Framework :: Apache Airflow :: Provider
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

author = Microsoft Corporation
author_email = amlairflowsupport@microsoft.com
url = https://github.com/Azure/airflow-provider-azure-machinelearning/
project_urls =
    Bug Tracker = https://github.com/Azure/airflow-provider-azure-machinelearning/issues

[options]
packages = find:
python_requires = >=3.7
install_requires =
    apache-airflow >= 2.0
    azure-ai-ml>=1.0.0

[options.packages.find]
exclude =
    test
    tests.*
    tests/__init__.py

[options.entry_points]
apache_airflow_provider=
  provider_info=airflow_provider_azure_machinelearning.__init__:get_provider_info
